RESOLVED FIXED219787
REGRESSION (r270665): testapi failing on JSC bots
https://bugs.webkit.org/show_bug.cgi?id=219787
Summary REGRESSION (r270665): testapi failing on JSC bots
Ryan Haddad
Reported 2020-12-11 09:52:08 PST
Created attachment 416003 [details] crash log from bot testapi appears to be failing on the Apple-Catalina-LLINT-CLoop-BuildAndTest after r270665 https://build.webkit.org/builders/Apple-Catalina-LLINT-CLoop-BuildAndTest/builds/9561
Attachments
crash log from bot (46.60 KB, text/plain)
2020-12-11 09:52 PST, Ryan Haddad
no flags
Patch (1.55 KB, patch)
2020-12-11 11:24 PST, Tadeu Zagallo
no flags
Patch (1.79 KB, patch)
2020-12-11 16:13 PST, Tadeu Zagallo
no flags
Radar WebKit Bug Importer
Comment 1 2020-12-11 09:52:54 PST
Ryan Haddad
Comment 2 2020-12-11 10:12:01 PST
Actually, this isn't limited to CLoop, it is also failing on debug and release JSC bots.
Tadeu Zagallo
Comment 3 2020-12-11 11:24:37 PST
Mark Lam
Comment 4 2020-12-11 11:25:40 PST
Comment on attachment 416016 [details] Patch r=me
EWS
Comment 5 2020-12-11 12:10:37 PST
Committed r270700: <https://trac.webkit.org/changeset/270700> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416016 [details].
Tadeu Zagallo
Comment 6 2020-12-11 16:13:37 PST
Reopening to attach new patch.
Tadeu Zagallo
Comment 7 2020-12-11 16:13:38 PST
EWS
Comment 8 2020-12-11 16:44:18 PST
Committed r270719: <https://trac.webkit.org/changeset/270719> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416062 [details].
Note You need to log in before you can comment on or make changes to this bug.