REGRESSION (r270665): testapi failing on CLoop bot https://bugs.webkit.org/show_bug.cgi?id=219787

Reviewed by Mark Lam.

The API has to special case the empty JSValue as null.

* API/JSValueRef.cpp:
(JSValueGetType):
(JSValueIsNull):


Canonical link: https://commits.webkit.org/232363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270700 268f45cc-cd09-0410-ab3c-d52691b4dbfc